# Projet13

./: .gitignore  README.md  docker-compose.yml  run_all.sh  start.sh  test_pipeline.sh
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agent/: graph.py  state.py
backend/app/api/: advice.py  evaluate.py  healthcheck.py  moves.py  vector_search.py  youtube.py
backend/app/models/: chess.py
backend/app/services/: fen_validator.py  lichess_service.py  milvus_service.py  stockfish_service.py  youtube_service.py
backend/data/openings/: alekhine.txt  carokann.txt  espagnole.txt  francaise.txt  gambit_dame.txt  gambit_roi.txt  italienne.txt  pirc.txt  scandinave.txt  sicilienne.txt
backend/scripts/: ingest_openings.py
frontend/: Dockerfile  angular.json  package-lock.json  package.json
