[project]
name = "chess-agent-backend"
version = "0.1.0"
description = "Backend FastAPI pour l'agent IA d'apprentissage des échecs - FFE"
authors = [
    {name = "Apinsun",email = "arnaudpinsun@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "python-chess (>=1.999,<2.0)",
    "langgraph (>=1.2.9,<2.0.0)",
    "pymilvus (>=3.0.0,<4.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)",
    "google-api-python-client (>=2.198.0,<3.0.0)",
    "stockfish (>=5.2.0,<6.0.0)",
    "mistralai (<2.0.0)",
    "langchain-mistralai (>=1.1.6,<2.0.0)",
    "langchain-core (>=1.4.9,<2.0.0)",
    "pymongo (>=4.15.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
